# jobbert-poc

./: .gitignore  Taskfile.yml  pyproject.toml
api-doc/: api.http  http-client.env.json  stock-controller.txt
api-doc/adverts/: main-sorter.json  software-dev.json  stock-controller.json  venue-supervisor.json
data/: skills_10k_cleaned.json  soc_titles.json  soc_titles_cleaned.json
scripts/: download_models.py  skills.py  soc.py
src/: cache.py  data_types.py  datasets.py  embeddings.py  main.py  model.py
